--- a/.env
+++ b/.env
@@ -30,3 +30,8 @@ APP_SECRET=c232460e0324eda0a7d9027f92472d95
 DATABASE_URL="mysql://root:@127.0.0.1:3306/Projet-Goupe"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+MAILER_DSN=gmail://lepdgaryha@gmail.com:dymsyv-kazxaG-gimba7@default?verify_peer=0
+###< symfony/google-mailer ###
