--- a/.env
+++ b/.env
@@ -35,3 +35,10 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/ARYHA"
 # Gmail SHOULD NOT be used on production, use it in development only.
 MAILER_DSN=gmail://lepdgaryha@gmail.com:dymsyv-kazxaG-gimba7@default?verify_peer=0
 ###< symfony/google-mailer ###
+
+$trustedProxies = $_SERVER['TRUSTED_PROXIES'] ?? $_ENV['TRUSTED_PROXIES'] ?? false;
+$trustedProxies = $trustedProxies ? explode(',', $trustedProxies) : [];
+if($_SERVER['APP_ENV'] == 'prod') $trustedProxies[] = $_SERVER['REMOTE_ADDR'];
+if($trustedProxies) {
+    Request::setTrustedProxies($trustedProxies, Request::HEADER_X_FORWARDED_AWS_ELB);
+}
