--- a/.env
+++ b/.env
@@ -33,5 +33,5 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/ARYHA"
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
-MAILER_DSN=gmail://lepdgaryha@gmail.com:dymsyv-kazxaG-gimba7@default?verify_peer=0
+MAILER_DSN=gmail://lepdgaryha@gmail.com:dajme3-coqcaB-cokvyw@default?verify_peer=0
 ###< symfony/google-mailer ###
