--- a/.env
+++ b/.env
@@ -27,11 +27,11 @@ APP_SECRET=c232460e0324eda0a7d9027f92472d95
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/ARYHA"
+DATABASE_URL="mysql://root:@127.0.0.1:3310/ARYHA"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
-MAILER_DSN=gmail://lepdgaryha@gmail.com:dajme3-coqcaB-cokvyw@default?verify_peer=0
+MAILER_DSN=gmail://lepdgaryha@gmail.com:rmwjkyeumjdoxcwd@default?verify_peer=0
 ###< symfony/google-mailer ###
